fixed scrollbar

--- a/frontend/src/styles/MainPage.scss
+++ b/frontend/src/styles/MainPage.scss
@@ -2,18 +2,48 @@ $primary-color: #DD9090;
 $secondary-color: #723A3A;
 $main-font: "Chango", serif;
 
+
+
 .main {
-    
-    display: flex;
-    flex-direction: row;
     padding: 60px;
+    font-family: $main-font;
+
+    position: relative;
+    padding-top: 50px;
+
+    overflow: auto !important;
+    height: calc(100vh - 90px);
+
+    &::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+        margin-top: 50px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: #723A3A;
+        border-radius: 5px;
+        width: 10px;
+        height: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+        border-radius: 40px;
+        width: 10px;
+        height: 10px;
+        margin-top: 50px;
+    }
+    
+        // ...
 
     &-search {
-        width: 100%;
+        width: 97%;
         border: 5px solid black;
         border-radius: 40px;
         height: auto !important;
         padding: 20px;
+
+        margin-bottom: 130px;
 
         &-field {
             border: 2px solid black;
@@ -22,9 +52,12 @@ $main-font: "Chango", serif;
             margin-bottom: 20px;
             box-sizing: border-box;
             width: 100%;
-            padding: 10px 20px;
+            padding: 10px 5px;
             font-family: $main-font;
             font-size: 20px;
+
+            display: flex;
+            align-items: center;
 
             &-inp {
                 border: none;
@@ -45,6 +78,7 @@ $main-font: "Chango", serif;
                 height: 50px;
                 stroke: black;
             }
+
 
             &-btn {
                 font-family: $main-font;
@@ -74,6 +108,57 @@ $main-font: "Chango", serif;
 
         }
     }
-
-
 }
+
+.favorite {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 25px;
+
+    // gap: 6%;
+    justify-content: space-between;
+
+
+    &-circle {
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        background-color: $secondary-color;
+    }
+
+    &-line {
+        width: 50%;
+        height: 5px;
+        background-color: $secondary-color;
+        border-radius: 5px;
+
+        // border: none;
+        outline: none;
+        // background: transparent;
+        position: relative;
+
+
+    }
+
+    p {
+        font-size: 60px;
+        color: $secondary-color;
+    }
+}
+
+.list-fv {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+// .title-bar {
+//     position: fixed;
+//     top: 0;
+//     width: 100%;
+//     z-index: 1000;
+// }
