--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,3 +1,9 @@
 * {
     margin: 0;
 }
+
+body {
+    // padding-top: 30px;
+    overflow: hidden;
+    padding: 10px;
+}
